tests/pass/DivAssign.java
package pass;

public class DivAssign {
  public int divassign(int x, int y) {
      x /= y;
      return x;
  }
}
