tests/fail/DivAssign.java
package fail;

import java.lang.System;

public class DivAssign {

  public static void main(String[] args ) {
    int x = 4;
    x /= 5;
  }

}
